--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
       <!-- Carousel Background -->
       <div class="hero-bg absolute inset-0">
         <div class="hero-carousel">
-          <img src="images/corosel1.jpeg" class="carousel-img active" />
+          <!-- <img src="images/corosel1.jpeg" class="carousel-img active" /> -->
           <img src="images/neverbefore.jpeg" class="carousel-img" />
+          <img src="images/nightgym.png" class="carousel-img active" />
           <img src="images/trainingstudio.jpeg" class="carousel-img" />
           <!-- <img src="images/pdf24_converted-images-6.jpg.jpeg" class="carousel-img"/> -->
           <img src="images/startshere.jpeg" class="carousel-img"/>
@@ -427,20 +428,20 @@
       <div class="parallax-bg absolute inset-0 w-full h-[120%]">
         <div
           class="w-full h-full bg-cover bg-center"
-          style="background-image: url(&quot;images/neverbefore.jpeg&quot;)"
+          style="background-image: url(&quot;images/corosel01.jpeg&quot;)"
         ></div>
-        <div class="absolute inset-0 bg-black/40"></div>
+        <!-- <div class="absolute inset-0 bg-black/40"></div> -->
       </div>
 
       <div
         class="parallax-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6"
       >
-        <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">
+        <!-- <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">
           Train Like Never Before
         </h2>
         <p class="text-xl md:text-3xl text-center max-w-2xl">
           Advanced training spaces built to unlock your full potential.
-        </p>
+        </p> -->
       </div>
     </section>
 
@@ -449,20 +450,20 @@
       <div class="parallax-bg absolute inset-0 w-full h-[120%]">
         <div
           class="w-full h-full bg-cover bg-center"
-          style="background-image: url(&quot;images/nightgym.png&quot;)"
+          style="background-image: url(&quot;images/corosel1.jpeg&quot;)"
         ></div>
-        <div class="absolute inset-0 bg-black/40"></div>
+        <!-- <div class="absolute inset-0 bg-black/40"></div> -->
       </div>
 
       <div
         class="parallax-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6"
       >
-        <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">
+        <!-- <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">
           Where Performance Begins
         </h2>
         <p class="text-xl md:text-3xl text-center max-w-2xl">
           Train smarter. Move stronger. Perform better.
-        </p>
+        </p> -->
       </div>
     </section>
 
