--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <img src="images/trainingstudio.jpeg" class="carousel-img" />
           <img src="images/corosel5.jpeg" class="carousel-img"/>
           <img src="images/startshere.jpeg" class="carousel-img"/>
+          <img src="images/corosel6.jpeg" class="carousel-img"/>
           
         </div>
       </div>
@@ -248,7 +249,7 @@
         class="sticky-section h-screen flex items-center justify-center sticky top-0 bg-white"
       >
         <div
-          class="sticky-content max-w-7xl mx-auto px-6 w-full flex flex-col md:flex-row-reverse items-center gap-12 opacity-0"
+          class="sticky-content max-w-7xl mx-auto px-6 w-full flex flex-col md:flex-row items-center gap-12 opacity-0"
         >
           <div class="flex-1">
             <h2 class="text-5xl md:text-7xl mb-6 font-bold">
@@ -324,6 +325,37 @@
             >
               <img
                 src="images/changingroom.jpeg"
+                alt="Training"
+                class="w-full h-full object-cover"
+              />
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <!-- Sticky Section 6 -->
+      <section
+        class="sticky-section h-screen flex items-center justify-center sticky top-0 bg-white"
+      >
+        <div
+          class="sticky-content max-w-7xl mx-auto px-6 w-full flex flex-col md:flex-row-reverse items-center gap-12 opacity-0"
+        >
+          <div class="flex-1">
+            <h2 class="text-5xl md:text-7xl mb-6 font-bold">
+              Base High Performance Center
+
+            </h2>
+            <p class="text-xl md:text-2xl text-gray-600">
+              Where strength, science, and performance come together.
+            </p>
+          </div>
+          <div class="flex-1">
+            <div
+              class="relative h-[400px] md:h-[600px] rounded-3xl overflow-hidden shadow-2xl"
+            >
+              <img
+                src="images/corosel1.jpeg"
                 alt="Training"
                 class="w-full h-full object-cover"
               />
@@ -444,27 +476,6 @@
       </div>
     </section>
 
-    <!-- Final CTA Parallax -->
-    <section class="parallax-section relative h-screen overflow-hidden">
-      <div class="parallax-bg absolute inset-0 w-full h-[120%]">
-        <div
-          class="w-full h-full bg-cover bg-center"
-          style="background-image: url(&quot;images/corosel1.jpeg&quot;)"
-        ></div>
-        <!-- <div class="absolute inset-0 bg-black/40"></div> -->
-      </div>
-
-      <div
-        class="parallax-content relative z-10 h-full flex flex-col items-center justify-center text-white px-6"
-      >
-        <!-- <h2 class="text-5xl md:text-8xl mb-6 text-center max-w-4xl font-bold">
-          Where Performance Begins
-        </h2>
-        <p class="text-xl md:text-3xl text-center max-w-2xl">
-          Train smarter. Move stronger. Perform better.
-        </p> -->
-      </div>
-    </section>
 
     <!-- CTA Section -->
     <section id="book-now" class="bg-black py-32 px-6">
